--- a/Landing/css/landing.css
+++ b/Landing/css/landing.css
@@ -1,7 +1,3 @@
-html{
-    background-color: #f9f9f9;
-}
-
 a{
     text-decoration: none;
 }
@@ -25,9 +21,8 @@ ins{
     box-sizing: border-box;
     margin: 0 auto;
     max-width: 1280px;
-    max-height: 7141px;;
     width: 100%;
-    height: 100%;
+    z-index: 1;
 }
 
 .landing__header{
@@ -40,6 +35,8 @@ ins{
     padding: 0 108px 0 108px;
     box-shadow: 0 4px 5px rgba(57, 63, 72, 0.3);
     background: white;
+    position: fixed;
+    z-index: 1;
 }
 
 .header__logo{
@@ -62,19 +59,23 @@ ins{
     line-height: 20px;
     color: #000000;
 }
+
 .header__links:hover{
     text-decoration: underline;
     text-underline-offset: 7px;
     text-decoration-thickness: 2px;
 }
+
 .back__call:hover{
     background-color: #5ede98;
     text-decoration: none;
     cursor: pointer;
 }
+
 .back__call:focus{
     background-color: #1d9453;
 }
+
 .header__btns{
     background: linear-gradient(70.6deg, #35CC79 10.03%, rgba(52, 125, 85, 0.65) 139.7%);
     border-radius: 20px;
@@ -88,6 +89,7 @@ ins{
     align-items: center;
     padding: 10px 7px;
 }
+
 .header__btns:hover{
     background: rgb(238, 229, 229);
     color: #35CC79;
@@ -101,23 +103,17 @@ ins{
 
 .main__wrapper{
     position: relative;
-    box-sizing: border-box;
     margin: 0 auto;
+    padding-top: 110px;
+    padding-bottom: 354px;
     max-width: 1280px;
     width: 100%;
     height: 100%;
+    background: #F9F9F9;
+    z-index: 0;
 }
 
-.first__title{
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: bold;
-    padding-top: 54px;
-    padding-left: 96px;
-    margin: 0;
-    font-size: 55px;
-    line-height: 24px;
-}
+
 
 #main__image{
     position: absolute;
@@ -154,7 +150,18 @@ ins{
     color: #000000;
 }
 
-.second__title{
+.title__zero-type{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: bold;
+    padding-top: 54px;
+    padding-left: 96px;
+    margin: 0;
+    font-size: 55px;
+    line-height: 24px;
+}
+
+.title__first-type{
     font-family: 'Open Sans';
     text-align: center;
     font-style: normal;
@@ -165,7 +172,8 @@ ins{
     font-size: 55px;
     line-height: 24px;
 }
-.third__title{
+
+.title__third-type{
     color: #3F3D56;
     font-family: 'Open Sans';
     text-align: center;
@@ -174,7 +182,6 @@ ins{
     font-size: 50px;
     line-height: 24px;
 }
-
 
 .second__sub-title{
     margin-top: 120px;
@@ -198,6 +205,7 @@ ins{
     justify-content: center;
     width: 100%;
 }
+
 .main__card{
     display: flex;
     flex-direction: column;
@@ -379,13 +387,13 @@ ins{
     text-align: center;
 }
 .sub-title__container{
-    margin: 0 271px;
+    margin: 0 254px;
     margin-top: 50px;
     justify-content: center;
 }
 .sub-title__content{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between ;
     align-items: center;
     width: 100%
 }
@@ -409,12 +417,12 @@ ins{
     font-size: 35px;
     line-height: 20px;
 }
-.fifth__title__container{
+.sub-title__text__container{
     margin: 0;
     padding: 0 194px;
     margin-top: 60px;
 }
-.fifth__title{
+.sub-title__text{
     margin: 0 auto;
     padding: 0;
     font-family: Open Sans,sans-serif;
@@ -490,7 +498,7 @@ ins{
     margin-top: 40px;
     
 }
-.second__table__block__btn{
+.order__btn{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -541,7 +549,131 @@ ins{
 #second__table__second__row{
     margin-top: 40px;
 }
-.sixth__title{
+
+.advertising__block{
+    position: relative;
+    margin: 0;
+    margin-top:105px;
+    margin-left: 100px;
+}
+.advertising__title{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 45px;
+}
+.advertising__block__sub-title{
+    width: 491px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 40px;
+}
+.advertising__block__content{
+    position: relative;
+    width: 525px;
+    box-sizing: border-box;
+}
+
+#first__block{
+    background: inherit;
+    border: 0;
+    box-shadow: none;
+    margin-right: 16px;
+}
+.advertising__block__text{
+    width: 513px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0;
+    margin-top: 40px;
+    
+}
+.advertising__block__content__img__container{
+    width: 566px;
+    height: 455px;
+    position: absolute;
+    top: 0;
+    right: 25px;
+}
+.advertising__block__content__img{
+    position: relative;
+    flex-direction: r;
+}
+#green__background__img{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#white__background__img{
+    position: absolute;
+    top: 80px;
+    right: 97px;
+}
+#kkt__img{
+    position: absolute;
+    top: 120px;
+    right: 97px;
+}
+#right-kkt__btn{
+    right:12px;
+}
+#left-kkt__btn{
+    left: 12px;
+    z-index: 1;
+}
+.kkt__slider__btns {
+    position: absolute;
+    top: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background: rgba(196, 196, 196, 0.8);
+    border-radius: 50%;
+    box-shadow: rgba(151, 149, 149, 0.25) 0px 4px 4px;
+    border: 0;
+}
+#right-kkt__btn img{
+    transform: rotate(180deg);
+}
+.kkt__radio__btns{
+    display: flex;
+    position: absolute;
+    top:400px;
+    left:200px;
+}
+.radio__btns{
+    margin: 0;
+    margin-left: 6px;
+}
+
+ input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+  
+    background: #C4C4C4;;
+    transition: 0.2s all linear;
+  
+  }
+  
+  input:checked {
+    background: black;
+    border: 0;
+  }
+
+  .title__second-type{
     font-family: Open Sans;
     font-style: normal;
     font-weight: bold;
@@ -549,10 +681,327 @@ ins{
     line-height: 24px;
     margin-top: 120px;
     text-align: center;
-}
+  }
+
+  .shopping__constructor__container{
+      margin: 140px 100px 0 100px;
+      padding: 0;
+
+  }
+  .shopping__constructor{
+    display: flex;
+  }
+ 
+  .label_of_select{
+    display: inline-block;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 25px;
+    color: #898989;
+    margin-bottom: 10px;
+  }
+  .select__items__container{
+    width: 553px;
+    height: 70px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.08), 0px 2px 24px rgba(0, 0, 0, 0.08);
+    border-radius: 7px;
+    border:2px white solid;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 25px;
+
+    appearance: none;
+    -webkit-appearance: none; 
+    background: url("selector__arrow.png") no-repeat right #FFFFFF;
+    background-position: 97% 50%; 
+    margin-bottom: 50px;
+  }
+
+  .select__items__container:hover{
+    border: 2px #35CC79 solid;
+  }
+  
+  .scenario__update{
+    display: flex;
+    align-items: center;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 25px;
+    margin-bottom: 50px;
+  }
+
+  .scenario__update__text{
+      margin-left: 14px;
+  }
+
+  .input__slider{
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 552px;
+    height: 70px;
+    background: #FFFFFF;
+    border-radius: 7px 7px 7px 7px;
+
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 25px;
+
+    border-bottom: 6px solid skyblue;
+    border-image: linear-gradient(90deg, rgba(64,195,123,1) 30%, rgba(196,196,196,1) 30%);
+    border-image-slice: 1;
+  }
+  .input__slider__circle{
+      position: absolute;
+      left:27%;
+      bottom: -16px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: linear-gradient(70.79deg, #35cb78 10.03%, #58a57b 114.42%);
+  }
+
+  .application__block{
+    background: #FFFFFF;
+    box-shadow: 0px 0px 1.0422px rgba(0, 0, 0, 0.08), 0px 1.0422px 12.5065px rgba(0, 0, 0, 0.08);
+    border-radius: 7.00547px;
+    padding:19px 20px 35px 23px;
+    margin-left: 92px;
+  }
+  .result__price{
+      display: flex;
+      flex-direction: column;
+  }
+  .growth__revenue{
+    display: flex;
+    flex-direction: column;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    padding-bottom: 35px;
+    margin-bottom: 35px;
+    border-bottom: 3px solid #B4ABAB;
+    color: #898989;
+  }
+  .growth__revenue__label{
+    margin-bottom: 31px;
+    line-height: 35px;
+    color: #898989;
+  }
+  .number{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    line-height: 32px;
+    color: black;
+  }
+  .number__expences{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    line-height: 12px;
+    margin-bottom: 61px;
+    color: black;
+  }
+  .result{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 12px;
+    margin-bottom: 58px;
+    color: #898989;
+  }
+  .label{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 25px;
+    margin-bottom: 40px;
+    color: #898989;
+  }
+  .application__btn{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 18px;
+    color: white;
+    
+    padding: 32px 86.5px;
+    border: none;
+    background: linear-gradient(70.6deg, #35CC79 10.03%, rgba(52, 125, 85, 0.65) 139.7%);
+    border-radius: 7px;
+    margin-top: 27px;
+  }
 
 
+  /* Footer
+   ================================= */
 
+
+   .footer__wrapper{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    position: relative;
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 100%;
+    height: 100%;
+   }
+
+   .reminder__container{
+       display: flex;
+   }
+
+   .footer__bg{
+    position: absolute;
+    top:0;
+   }
+
+   .reminder{
+    position: relative;
+    top: 215px;
+    margin-left: 100px;
+   }
+
+   .reminder__text{
+    width: 581px;
+    height: 244px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 55px;
+    line-height: 110%;
+    margin-bottom: 46px;
+    color: black;
+   }
+
+   .data__input__block{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 161px;
+    margin-left: 115px;
+    font-family: Open Sans;
+   }
+
+   .input__field{
+    width: 385px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 25px;
+    border-radius: 0;
+    background-color: white;
+    border-radius: 7px;
+    padding-left: 8px;
+   }
+   .input__field__label{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 25px;
+    color: #000000;
+    margin-top: 16px;
+    margin-bottom: 5px;
+   }
+   .agreement__field{
+       display: flex;
+       margin-top: 50px;
+       margin-bottom: 48px;
+   }
+   .checkbox__on{
+    margin-right:12px;
+    width: 20px;
+    height: 20px;
+   }
+   .agreement{
+    width: 351px;
+    height: 50px;
+    
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+    
+    color: #000000;
+   }
+   #app__white-btn{
+    background: white;
+    color: black;
+    width: 384px;
+    height: 83px;   
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 18px;
+   }
+   
+   .label__end{
+       margin-top:196px;
+       margin-left: 100px;
+   }
+   .iris__contacts{
+       position: relative;
+       display: flex;
+   }
+   
+   .iris__contacts__content{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 100%;
+    width: 294px;
+    border-bottom: 1px black solid;
+    padding-bottom: 5px;
+    margin-right: 69px;
+   }
+
+   .iris__contacts__label{
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 110%;
+    margin-bottom: 14px;
+    opacity: 0.7;
+   }
+
+   .something__important{
+    width: 618px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 120%;
+    margin-top: 40px;
+    margin-left: 100px;
+   }
+
+
+ 
 
 
 
