--- a/Landing/css/landing.css
+++ b/Landing/css/landing.css
@@ -856,7 +856,7 @@ ins{
    .footer__wrapper{
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: #F9F9F9;
     position: relative;
     margin: 0 auto;
     max-width: 1280px;
@@ -988,7 +988,6 @@ ins{
     margin-bottom: 14px;
     opacity: 0.7;
    }
-
    .something__important{
     width: 618px;
     font-family: Open Sans;
