--- a/Landing/css/landing.css
+++ b/Landing/css/landing.css
@@ -211,6 +211,11 @@ ins{
     width: 100%;
 }
 
+.main__cards__container{
+    display: flex;
+    justify-content: center;
+}
+
 .main__card{
     display: flex;
     flex-direction: column;
@@ -353,6 +358,11 @@ ins{
     bottom: 23.03px;
     border: none;
 }
+
+.kkt__radio__btns.main__tables__radio{
+    display: none;
+}
+
 .interactive__card__btn:hover{
     background: #3F3D56;
     cursor: pointer;
@@ -398,17 +408,25 @@ ins{
     margin-top: 120px;
     text-align: center;
 }
+
+.main-titles{
+    display: flex;
+    flex-direction: column;
+}
+
 .sub-title__container{
     margin: 0 254px;
     margin-top: 50px;
     justify-content: center;
 }
+
 .sub-title__content{
     display: flex;
     justify-content: space-between ;
     align-items: center;
     width: 100%
 }
+
 .sub-title__info__container{
     display: flex;
     justify-content: center;
@@ -418,6 +436,7 @@ ins{
     background: linear-gradient(70.79deg, #35cb78 10.03%, #58a57b 114.42%);
     border-radius: 20px;
 }
+
 .sub-title__active__cell{
     margin: 0;
     font-family: 'Open Sans';
@@ -463,10 +482,12 @@ ins{
     justify-content: center;
     margin-top: 140px;
 }
+
 .second__table{
     display: flex;
     flex-direction: column;
 }
+
 .second__table__row{
     margin: 0;
     margin-left: 13px;
@@ -476,6 +497,7 @@ ins{
     align-items: center;
     justify-content: space-between;
 }
+
 .second__table__block__title{
     font-family: Source Sans Pro;
     font-style: normal;
@@ -483,6 +505,7 @@ ins{
     font-size: 35px;
     line-height: 30px;
 }
+
 .second__table__block{
     position: relative;
     width: 525px;
@@ -493,6 +516,7 @@ ins{
     box-shadow: 0px 0px 1.04139px rgba(0, 0, 0, 0.08), 0px 1.04139px 12.4967px rgba(0, 0, 0, 0.08);
     border-radius: 7.28973px;
 }
+
 #first__block{
     background: inherit;
     border: 0;
