landing mobile version 100% progress

--- a/Landing/css/landing.css
+++ b/Landing/css/landing.css
@@ -955,6 +955,10 @@ ins{
     color: black;
    }
 
+   .iris__logo__mobile{
+        display: none;
+   }
+   
    .data__input__block{
     display: flex;
     flex-direction: column;
