--- a/my_application/src/index.css
+++ b/my_application/src/index.css
@@ -1,3 +1,11 @@
+html{
+  height: 100%;
+
+}
+
+li{
+  list-style: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +13,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 code {
