--- a/my_application/src/components/form/form.sass
+++ b/my_application/src/components/form/form.sass
@@ -1,4 +1,5 @@
 .baseForm
+  position: relative
   margin-top: 111px
 
   display: flex
@@ -6,4 +7,21 @@
   align-items: center
   width: 375px
   height: auto
-  
+
+.default
+  color: black
+.error
+  color: red
+.messageHide
+  margin-top: 17.6px
+  visibility: hidden
+.messageShow
+  visibility: visible
+  margin-top: 17.6px
+  display: block
+  color: red
+  line-height: 18px
+  text-align: center
+  font-style: normal
+  font-weight: normal
+  font-size: 13px
