collectionsStore added mainPage header added

--- a/my_application/src/components/button/button.module.sass
+++ b/my_application/src/components/button/button.module.sass
@@ -1,4 +1,4 @@
-button
+.authButton
   margin-top: 111px
 
   width: 149px
@@ -11,6 +11,8 @@ button
   line-height: 22px
   color: rgba(60, 60, 67, 0.3)
 
-button:hover
+.authButton:hover
   border: 4px blue solid
   color: blue
+
+
