Switch button sass added

--- a/my_application/src/Pages/Main/main.module.sass
+++ b/my_application/src/Pages/Main/main.module.sass
@@ -16,6 +16,11 @@
   flex-wrap: wrap
   justify-content: space-between
 
-.switchBtns
-  margin-top: 35px
-  margin-bottom: 44px
+.listIcon
+  margin-left: 42px
+  margin-bottom: 7px
+
+.switchButtonContainer
+  display: flex
+  align-items: center
+  justify-content: center
