--- a/my_application/src/components/card/card.module.sass
+++ b/my_application/src/components/card/card.module.sass
@@ -3,7 +3,6 @@
 
   margin: 0
 
-  width: 25%
   text-align: left
 
 .cardTitle
@@ -15,6 +14,7 @@
   font-size: 12px
   line-height: 21px
   letter-spacing: -0.0929477px
+  color: black
 .cardRate
 
   position: absolute
