--- a/AngularProject/AngularApp/src/app/components/film-preview-card/film-preview-card.component.html
+++ b/AngularProject/AngularApp/src/app/components/film-preview-card/film-preview-card.component.html
@@ -1,9 +1,11 @@
 <div class="filmPreviewContainer">
-  <div class="previewImg">
-    <img src="{{previewImg}}" alt="">
-  </div>
-    <div class="previewText">
+  <a routerLink="/film">
+    <div class="previewImg">
+      <img src="{{previewImg}}" alt="">
+    </div>
+  </a>
+  <div class="previewText">
       <div>{{previewText}}</div>
       <div>{{year}}</div>
     </div>
-  </div>
+</div>
