--- a/AngularProject/AngularApp/src/app/components/toggle-btn/toggle-btn.component.html
+++ b/AngularProject/AngularApp/src/app/components/toggle-btn/toggle-btn.component.html
@@ -1,8 +1,8 @@
 <div class="toggleButton">
-  <button class="toggle" [class.active]="innerValue" (click)="toggle(true)">
+  <button class="toggle" [class.active]="innerValue" (click)="toggle(true)" routerLink="/filmsCollection">
     КиноПоиск
   </button>
-  <button class="toggle" [class.active]="!innerValue" (click)="toggle(false)">
+  <button class="toggle" [class.active]="!innerValue" (click)="toggle(false)" routerLink="/">
     Вручную
   </button>
 </div>
