--- a/AngularProject/AngularApp/src/app/pages/home/home.component.html
+++ b/AngularProject/AngularApp/src/app/pages/home/home.component.html
@@ -2,11 +2,9 @@
 <div class="homeBodyContainer">
   <div class="homeBody">
     <form [formGroup]="form">
-      <app-toggle-btn class="toggleButtonContainer" (innerValueToParent)="updateInnerValue($event)" formControlName="toggle"></app-toggle-btn>
+      <app-toggle-btn class="toggleButtonContainer"  formControlName="toggle"></app-toggle-btn>
     </form>
-    <ng-container *ngIf="innerValue">
-      <app-film-search-form></app-film-search-form>
-    </ng-container>
+      <router-outlet></router-outlet>
   </div>
 </div>
 
