--- a/AngularProject/AngularApp/src/app/components/text-input/text-input.component.html
+++ b/AngularProject/AngularApp/src/app/components/text-input/text-input.component.html
@@ -1,4 +1,4 @@
 <div class="inputContainer">
   <label for="textInput">{{name}}</label>
-  <input type="text" id="textInput" placeholder="{{placeholder}}" [formControlName]="controlName" [formControl]="textInput">
+  <input type="text" id="textInput" value="{{value}}" placeholder="{{placeholder}}" formControlName="{{controlName}}" [formControl]="textInput">
 </div>
