Test adding added

--- a/AngularProject/AngularApp/src/app/components/film-preview-card/film-preview-card.component.html
+++ b/AngularProject/AngularApp/src/app/components/film-preview-card/film-preview-card.component.html
@@ -6,6 +6,7 @@
 
   <div class="previewText">
       <div>{{previewText}}</div>
+      <div class="link" routerLink="edit">{{link}}</div>
       <div>{{year}}</div>
     </div>
 </div>
