--- a/AngularProject/AngularApp/src/app/components/film-view/film-view.component.sass
+++ b/AngularProject/AngularApp/src/app/components/film-view/film-view.component.sass
@@ -1,3 +1,7 @@
+.inputContainer
+  display: flex
+  flex-direction: column
+
 label
   margin-left: 16px
 
@@ -6,4 +10,8 @@ label
   font-size: 22px
   line-height: 28px
   letter-spacing: 0.8px
+
+
+#saveBtnContainer
+  margin-top: 60px
 
