--- a/AngularProject/AngularApp/src/app/components/text-input/text-input.component.html
+++ b/AngularProject/AngularApp/src/app/components/text-input/text-input.component.html
@@ -1,2 +1,2 @@
-  <label for="textInput">{{name}}</label>
-  <input type="text" id="textInput" value="{{value}}" placeholder="{{placeholder}}">
+<label for="textInput">{{name}}</label>
+<input [formControl]="inputControl" (change)="setValue()" type="text" id="textInput" placeholder="{{placeholder}}">
