--- a/AngularProject/AngularApp/src/app/components/film-search-form/film-search-form.component.html
+++ b/AngularProject/AngularApp/src/app/components/film-search-form/film-search-form.component.html
@@ -8,6 +8,6 @@
 </div>
 <router-outlet>
   <div class="films" *ngFor="let item of films$ | async">
-    <app-film-preview-card [routerLink]="item.id!=0?['film',item.id]:['']" link="{{item.link}}" previewImg="{{item.imgUrl}}" previewText="{{item.name}}" year="{{item.year}}"></app-film-preview-card>
+    <app-film-preview-card (click)="item.id!=0?clearFilms():undefined" [routerLink]="item.id!=0?['film',item.id]:['']" link="{{item.link}}" previewImg="{{item.imgUrl}}" previewText="{{item.name}}" year="{{item.year}}"></app-film-preview-card>
   </div>
 </router-outlet>
