reset button added

--- a/AngularProject/AngularApp/src/app/components/film-search-form/film-search-form.component.sass
+++ b/AngularProject/AngularApp/src/app/components/film-search-form/film-search-form.component.sass
@@ -30,3 +30,23 @@ input
 
   &:focus
     outline: none
+
+.inputContainer
+  position: relative
+  display: flex
+  align-items: center
+
+.resetButton
+  width: 40px
+  height: 42px
+
+  position: absolute
+  right: 0
+  top: 46%
+
+  background: transparent
+  border: 0
+  &:hover
+    cursor: pointer
+
+
