--- a/AngularProject/AngularApp/src/app/components/film-search-form/film-search-form.component.html
+++ b/AngularProject/AngularApp/src/app/components/film-search-form/film-search-form.component.html
@@ -3,6 +3,8 @@
     <div class="inputContainer">
       <label for="textInput">Название</label>
       <input type="text" id="textInput" placeholder="Например, Титаник" formControlName="searchInput">
+      <button class="resetButton" (click)="clearFilms()" *ngIf="form.get('searchInput')?.value!= null && form.get('searchInput')?.value!=''">
+        <img src="assets/images/close.png" alt=""></button>
     </div>
   </div>
 </div>
