--- a/AngularProject/AngularApp/src/app/components/film-view/film-view.component.html
+++ b/AngularProject/AngularApp/src/app/components/film-view/film-view.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="formGroup" action="">
   <div class="inputContainer">
-  <app-text-input formControlName="nameInput" controlName="nameInput" name="Название" placeholder="Например, Титаник"></app-text-input>
+  <app-text-input formControlName="nameInput" name="Название" placeholder="Например, Титаник"></app-text-input>
   </div>
     <div class="inputContainer">
   <app-text-input formControlName="yearInput"  name="Год" placeholder="Укажите год выхода фильма"></app-text-input>
@@ -11,9 +11,9 @@
     <textarea type="text" id="descriptionInput" placeholder="Напишите пару слов о сюжете" formControlName="descriptionInput"></textarea>
   </div>
   <div class="inputContainer">
-  <app-genre-search [selectedGenres]="film.genre"></app-genre-search>
+  <app-genre-search (newItemEvent)="addNewGenre($event)" [selectedGenres]="film.genre"></app-genre-search>
   </div>
   <div class="btnContainer" id="saveBtnContainer">
-    <button class="btn saveBtn"><img class="btnIcon" src="assets/images/plus.png" alt=""/>Сохранить</button>
+    <button class="btn saveBtn" (click)="saveChanges()"><img class="btnIcon" src="assets/images/plus.png" alt=""/>Сохранить</button>
   </div>
 </form>
