css and html fixing

--- a/AngularProject/AngularApp/src/app/pages/home/home.component.html
+++ b/AngularProject/AngularApp/src/app/pages/home/home.component.html
@@ -1,6 +1,9 @@
 <app-header></app-header>
 <div class="homeBodyContainer">
   <div class="homeBody">
+    <label class="title">
+      О фильме
+    </label>
     <form [formGroup]="form">
       <app-toggle-btn class="toggleButtonContainer"  formControlName="toggle"></app-toggle-btn>
     </form>
