--- a/AngularProject/AngularApp/src/app/pages/home/home.component.sass
+++ b/AngularProject/AngularApp/src/app/pages/home/home.component.sass
@@ -12,4 +12,8 @@
   display: flex
   justify-content: center
 
-
+.title
+  text-align: center
+  margin-bottom: 35px
+  font-size: 36px
+  line-height: 41px
