bannerSwiper component added

--- a/eco_project_react/src/App.css
+++ b/eco_project_react/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Inter:wght@400;700&display=swap');
+*{
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
