--- a/eco_project_react/src/components/banner/banner.module.sass
+++ b/eco_project_react/src/components/banner/banner.module.sass
@@ -1,7 +1,7 @@
 .banner
   height: 320px
 
-  background: aquamarine
+  background: #B3EDC8
 
   padding-top: 56px
   padding-left: 64px
@@ -31,3 +31,18 @@
   color: rgba(0, 11, 38, 0.8)
 
   margin-bottom: 40px
+
+.bannerBtn
+  border-radius: 8px
+  border: 0
+  padding: 12px 24px
+
+  background: #07C88E
+  color: #FFFFFF
+
+  &Text
+    line-height: 24px
+
+  &:hover
+    background: #0f8d6a
+    cursor: pointer
