--- a/eco_project_react/src/pages/main/main.module.sass
+++ b/eco_project_react/src/pages/main/main.module.sass
@@ -2,9 +2,15 @@
   margin: 0 auto
   max-width: 1200px
 
-
 .navCards
   display: flex
   justify-content: space-between
   max-width: 1200px
   margin-top: 48px
+
+.mainPage
+  min-height: 100vh
+  display: grid
+  grid-template-rows: auto 1fr auto
+  grid-template-columns: 100%
+
