--- a/eco_project_react/src/components/navCard/navigationCard.module.sass
+++ b/eco_project_react/src/components/navCard/navigationCard.module.sass
@@ -6,14 +6,18 @@
 
 .navCard
   height: 300px
+  box-sizing: content-box
+
+  overflow: hidden
+
+  display: flex
+  justify-content: space-between
 
   text-align: left
   white-space: pre-line
 
   border: 1px solid rgba(18, 34, 88, 0.12)
   border-radius: 16px
-
-  padding: 40px 0 0 40px
 
 .navCardTitle
   margin-top: 0
@@ -23,4 +27,30 @@
   margin-bottom: 46px
   color: rgba(0, 11, 38, 0.56)
   line-height: 24px
+
+.navCardBtn
+  display: flex
+  align-items: center
+
+  background: rgba(62, 80, 114, 0.08)
+  border: 0
+  border-radius: 8px
+
+  padding: 12px
+
+  &:hover
+    cursor: pointer
+    background: rgba(20, 20, 24, 0.2)
+
+.navCardContent
+  padding: 40px 0 0 40px
+
+.navCardImgWrapper
+  display: flex
+  align-items: flex-end
+
+  padding-bottom: 6.5px
+
+.navCardImg
+  max-width: 306px
 
