--- a/eco_project_react/src/components/banner/banner.module.sass
+++ b/eco_project_react/src/components/banner/banner.module.sass
@@ -1,10 +1,12 @@
 .banner
+  display: flex
+  justify-content: space-between
+
   height: 320px
 
   border-radius: 24px
 
-  background: #B3EDC8
-
+.bannerContent
   padding-top: 56px
   padding-left: 64px
 
