--- a/eco_project_react/src/components/swiper/bannerSwiper.module.sass
+++ b/eco_project_react/src/components/swiper/bannerSwiper.module.sass
@@ -2,14 +2,13 @@
   max-width: 100%
   margin-top: 40px
   text-align: left
+  position: static
+
+.customSwiperWrapper
+  position: relative
 
 .swiper-button-next
-  background-image: url(../../assets/images/rightArrow.png)
-  background-repeat: no-repeat
-  background-size: 100% auto
-  background-position: center
 
 
 .swiper-button-next::after
   display: none
-
