--- a/eco_project_react/src/components/footer/footer.module.sass
+++ b/eco_project_react/src/components/footer/footer.module.sass
@@ -18,3 +18,12 @@
   color: rgba(0, 11, 38, 0.64)
   &:not(:last-child)
     margin-right: 32px
+  &:hover
+    cursor: pointer
+    color: rgba(1, 4, 14, 0.74)
+
+.footerIcon
+  display: flex
+  align-items: center
+  margin-right: 8px
+
