--- a/eco_project_react/src/components/navCard/navigationCard.module.sass
+++ b/eco_project_react/src/components/navCard/navigationCard.module.sass
@@ -14,7 +14,6 @@
   justify-content: space-between
 
   text-align: left
-  white-space: pre-line
 
   border: 1px solid rgba(18, 34, 88, 0.12)
   border-radius: 16px
@@ -24,6 +23,8 @@
   margin-bottom: 14px
 
 .navCardText
+  white-space: pre
+
   margin-bottom: 46px
   color: rgba(0, 11, 38, 0.56)
   line-height: 24px
@@ -48,9 +49,7 @@
 .navCardImgWrapper
   display: flex
   align-items: flex-end
-
   padding-bottom: 6.5px
 
 .navCardImg
-  max-width: 306px
 
