--- a/eco_project_react/src/components/banner/banner.module.sass
+++ b/eco_project_react/src/components/banner/banner.module.sass
@@ -1,8 +1,15 @@
+.bannerWrapper
+  width: 100%
+  max-width: 1600px
+  margin: 0 auto
+
 .banner
   display: flex
   justify-content: space-between
   overflow: hidden
-  height: 320px
+
+  min-height: 320px
+  height: 100%
 
   border-radius: 24px
 
@@ -50,3 +57,7 @@
   &:hover
     background: #0f8d6a
     cursor: pointer
+
+.bannerImg
+  display: flex
+  align-items: flex-end
