--- a/eco_project_react/src/components/swiper/bannerSwiper.module.sass
+++ b/eco_project_react/src/components/swiper/bannerSwiper.module.sass
@@ -4,7 +4,12 @@
   text-align: left
   position: static
   overflow: hidden
+  min-height: 300px
+  height: 100%
 
 .customSwiperWrapper
   position: relative
+  width: 100%
 
+.swiper
+  height: 100%
