--- a/eco_project_react/src/components/navCard/navigationCard.module.sass
+++ b/eco_project_react/src/components/navCard/navigationCard.module.sass
@@ -5,7 +5,8 @@
     margin-right: 24px
 
 .navCard
-  height: 300px
+  min-height: 300px
+  height: 100%
   box-sizing: content-box
 
   overflow: hidden
@@ -23,8 +24,6 @@
   margin-bottom: 14px
 
 .navCardText
-  white-space: pre
-
   margin-bottom: 46px
   color: rgba(0, 11, 38, 0.56)
   line-height: 24px
@@ -49,7 +48,15 @@
 .navCardImgWrapper
   display: flex
   align-items: flex-end
+  justify-content: end
   padding-bottom: 6.5px
+  width: 100%
+  min-width: fit-content
 
 .navCardImg
+  height: auto
+  width: 100%
 
+img
+  width: 100%
+  object-fit: cover
